<resources>
    <string name="app_name">Thermos</string>
    <string name="editString">write ip to connect</string>
    <string name="connectButton">Connect</string>
    <string name="autor">by Jorge Luzón</string>
    <string name="b0">Connect to PC</string>
    <string name="b1">History</string>
    <string name="b3">Configuration</string>
    <string name="cfg">Set your configuration</string>
    <string name="cfgIP">IP</string>
    <string name="alert">Alert ºC</string>
    <string name="thempText">Your Current PC Themp</string>
    <string name="showGraph">Show Graphic</string>
    <string name="graphicThemp">Graphic Temperatures</string>
    <string name="channel_name">My notification</string>
    <string name="channel_description">Themp</string>
    <string name="local_service_started">21</string>
    <string name="currentCfg">Your actual configuration:</string>
    <string name="textIP">Select PC to tracing</string>
    <string name="notification">Select your alert themp (Number in ºC)</string>
    <string name="textConfiguration">Set a configuration to trace one PC temperature, select PC IP and which themp you want as alert.\nYou will be notificated if temperature is over this number.</string>
</resources>
